# coolio

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/: FUNDING.yml
coolio-drivers/: Cargo.toml
coolio-drivers/src/: config.rs  device_manager.rs  driver.rs  lib.rs  metrics.rs  utils.rs
coolio-drivers/src/drivers/: kraken_gen3.rs  mod.rs
coolio-ui/: Cargo.toml  build.rs  package-lock.json  package.json
coolio-ui/res/: #main_window.glade#  Coolio.desktop  gtk-light.css
coolio-ui/src/: config.rs  coolio.rs  icons.gresource  icons.rs
coolio-ui/src/widgets/: cooling.rs  metric.rs  mod.rs  profile_config.rs
