[package]
name = "coolio-drivers"
version = "0.1.0"
authors = ["Milan Jarić <milan.jaric@gmail.com>"]
edition = "2018"

[lib]
name = "coolio_drivers"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
colorous = { version = "1.0" }
bitflags = "1.2"
log = "0.4"
hidapi = "1.2.3"
sysinfo = "0.15"
futures = "0.3"
lazy_static = "1.4.0"