[package]
name = "coolio-ui"
version = "0.1.0"
authors = ["Milan Jarić <milan.jaric@gmail.com>"]
edition = "2018"
build = "build.rs"
license = "GPL"
repository = "https://github.com/coolio-rs/coolio"
publish = false

[[bin]]
name = "coolio"
path = "src/coolio.rs"

[dependencies]
coolio-drivers = { path = "../coolio-drivers" }
env_logger="0.7"
log = "0.4"
lazy_static = "1.4"
relm = "0.20"
relm-derive = "0.20"
serde = {version="1.0", features= ["derive"]}
toml  = "0.5"
measurements = "0.10"
usvg = "0.11"
resvg = "0.11"
futures = "0.3"

[dependencies.cairo-rs]
version = "0.9"
features = ["png", "svg", "v1_16"]

[dependencies.gio]
version = "0.9"

[dependencies.glib]
version = "0.10"

[dependencies.gdk]
version = "0.13"

[dependencies.gtk]
version = "0.9"
features = ["v3_22"]

[dependencies.gdk-pixbuf]
version = "0.9"
features = ["v2_32"]


[package.metadata.deb]
name = "coolio-rs"
maintainer = "Milan Jaric"
depends = "$auto"
copyright = "2020, Milan Jaric."
extended-description = "NZXT KrakenX series configurator and monitoring app."
license-file = ["../LICENSE", "2"]
section = "utils"
priority = "optional"
assets = [
    ["../target/release/coolio", "usr/bin/", "755"],
    ["res/app-icon.png", "usr/share/icons/coolio-rs/", "644"],
    ["res/Coolio.desktop", "usr/share/applications/", "644"]
]
